# arcgis-item-dependency-interrogation

./: .bumpversion.cfg  .gitignore  Makefile  README.md  environment.yml  make.cmd  make.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: arcpy.instructions.md  logging.instructions.md  notebooks.instructions.md  python-style.instructions.md  sql.instructions.md  testing.instructions.md
.github/workflows/: make-mkdocs.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
arcgis/: README.md  arcgis-item-dependency-interrogation.aprx  arcgis_dependency.pyt
config/: config.yml
docsrc/: mkdocs.yml
docsrc/mkdocs/: api.md  configuration.md  cookiecutter_reference.md  index.md  quickstart.md
notebooks/: storymap_dependency_investigation.ipynb
scripts/: make_data.py
specs/001-webgis-item-dependencies/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-webgis-item-dependencies/checklists/: requirements.md
specs/002-parent-impact-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/arcgis_dependency/: __init__.py  _main.py  config.py
testing/: conftest.py  test_arcgis_dependency.py  test_dependency_interrogation.py  test_parent_impact_batch.py  test_parent_impact_export.py  test_parent_impact_single.py
(+8 files in other folders)
