[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "arcgis-item-dependency-interrogation"

version = "0.1.0.dev0"

authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]

description = "Using the ArcGIS Python API to interrogate ArcGIS Item dependencies."

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
]


license = {text = "Apache-2.0"}


dependencies = [
    "arcgis>=2.2.0",
  "openpyxl>=3.1.0",
    "numpy>=1.7",
    "pandas>=1.0.5",
    "pyarrow>=1.0.0",
    # "arcpy-parquet @ git+https://github.com/knu2xs/arcpy-parquet.git",
    
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["arcgis_dependency*"]

[tool.setuptools.package-data]
"arcgis_dependency.sql" = ["*.sql"]
